--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
-<html>
-    <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
-    </body>
+<!DOCTYPE html>                      
+<html lang="en" dir="ltr">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+  <link rel="stylesheet" href="styles.css"> 
+  <script src="script.js"></script>
+  <title>Simple Interest Calculator</title>
+</head>
+<body>
+    <div class="container">
+      <h1 class="thead">Simple Interest Calculator</h1>
+      <table id="table">
+        <tr>
+          <td><label for="principal">Amount</label></td>
+          <td> <input type="number" id="principal" onchange="validateAmount()"></td>
+        </tr>
+        <tr>
+          <form>
+          <td><label for="rate" >Interest Rate</label></td>
+          <td><input type="range" id="rate" min="0" max="20" step="0.05" value="10.25" onchange="getSliderValue()"></td>
+          <td><span id="ratevalue"> 10.25 </span>%</td>
+          </form>
+        </tr>
+        <tr>
+          <td><label for="time">No. of Years</label></td>
+          <td><select name="time" id="time">
+              <option value="1">1</option> 
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+              </select> </td>
+        </tr>
+        <tr>
+          <td><button onclick="SimpleInterest()" class="button">Compute Interest</button></td>
+        </tr>
+      </table>
+      <p id="compute"></p><br>
+      <footer class="foot">&#169 Everyone Can Get Rich</footer>
+    </div>
+</body>
 </html>
