--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <link rel="stylesheet" href="styles.css"> 
+  <link rel="stylesheet" href="style.css"> 
   <script src="script.js"></script>
   <title>Simple Interest Calculator</title>
 </head>
